# cmdr

./: .gitignore  LICENSE.MD  README.md  pyproject.toml
cmdr/: cmdr.py  setup.py
tests/: test_cmdr.py
